# docker

./: .dockerignore  .editorconfig  .gitignore  .o.json.swp  LICENSE  Makefile  README.md  docker-compose.yml  o.json
Images/icon/: Docker.ai  docker-wasm.ai  dockerfile.ai  ho-hai-nghia.ai  rust.ai
Images/psd/: Template.psd
command/: README.md
command/html/: index.html
deploy/: README.md
deploy/ansible/: env.example.yaml  inventory.yaml  playbook.yaml
deploy/haproxy/: docker-compose.yaml
deploy/users/: .env.example  docker-compose.yaml
deploy/vagrant/: Vagrantfile
deploy/web-assembly/: docker-compose.yaml
docker-compose/: README.md  docker-compose-example.yaml  docker-compose.yaml
docker-compose/conf.d/: default.conf
docker-compose/html/: index.html  post.html
docker-wasm/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
docker-wasm/src/: main.rs
dockerfile/: Dockerfile  README.md  docker-compose.yaml
multi-platform/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
multi-platform/conf.d/: default.conf
multi-platform/html/: index.html  post.html
multi-platform/src/: main.rs
multi-stage/: README.md  docker-compose.yaml
multi-stage/docker/: Level1.Dockerfile  Level2.Dockerfile  Level3.Dockerfile  Level4.Dockerfile  Level5.Dockerfile
multi-stage/src/: main.rs
myapp/: Cargo.toml  Dockerfile
myapp/src/: main.rs
seminar/: README.md
virtual/Ansible/: inventory.yaml  playbook.yml
virtual/Vagrant/: Vagrantfile
web-assembly/: Cargo.toml  README.md  index.html
web-assembly/src/: main.rs  state.rs
(+6 files in other folders)
