[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
authors = ["Hai Nghia <hohainghia19@gmail.com>"]
description = "Web  Assembly"

[dependencies]
hyper_wasi = { version = "0.15.1", features = ["full"] }
tokio_wasi = { version = "1.25.1", features = ["rt", "macros", "net", "time", "io-util"] }